@startuml
title Figure 17. Booking State Model
skinparam monochrome true
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam ArrowFontSize 12
skinparam nodesep 55
skinparam ranksep 65
[*] --> CONFIRMED : successful atomic booking
CONFIRMED --> CANCELLED : member/admin cancellation\nsubject to policy
CONFIRMED --> COMPLETED : authorized return completion
CANCELLED --> [*]
COMPLETED --> [*]
note right of CANCELLED
Refund is a separate append-only
ledger event and is created at most once.
end note
note right of COMPLETED
A completed booking may support
one rating and one dispute.
end note
@enduml



